# shuka

./: .env.example  .gitignore  Cargo.toml  README.md
docs/: adding-another-explorer.md  parser-notes.md
src/: app.rs  cli.rs  error.rs  lib.rs  main.rs  types.rs
src/explorers/: battlechain.rs  ethereum.rs  mod.rs  traits.rs
src/parsers/: source.rs
src/storage/: writer.rs
