[package]
name = "shuka"
version = "0.1.0"
edition = "2024"
description = "CLI tool for fetching verified smart contract source code from blockchain explorers"
license = "MIT"
repository = "https://github.com/kode-n-rolla/shuka"
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
dotenvy = "0.15"
serde_json = "1"
